# MeigenBot-Rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  db.yaml  discord_slash_command.json
.github/workflows/: deploy.yaml  main.yml
bot-core/: Cargo.toml
bot-core/src/: api.rs  main.rs  message_parser.rs
bot-core/src/api/: inner.rs
bot-core/src/commands/: search.rs
bot-core/src/commands/search/: author.rs
bot-core/src/db/: mongodb.rs
bot_core/: Cargo.toml
bot_core/src/: main.rs
db/: Cargo.toml
db/src/: filedb.rs  lib.rs  mongodb.rs
db/src/db/: filedb.rs
discord_bot/: Cargo.toml
discord_bot/src/: cli.rs  command_registry.rs  commands.rs  main.rs  message_parser.rs
discord_bot/src/commands/: delete.rs  help.rs  id.rs  list.rs  make.rs  random.rs  search.rs  status.rs
discord_bot/src/commands/search/: author.rs  content.rs
docker/: Dockerfile-Mongo  Dockerfile-Rust  InitMongo.js  docker-compose.yml
interface/: Cargo.toml
interface/src/: lib.rs
meigen/: Cargo.toml
meigen/src/: commands.rs  db.rs  lib.rs  message_parser.rs
meigen/src/commands/: delete.rs  export.rs  help.rs  id.rs  list.rs  make.rs  random.rs  search.rs  status.rs
meigen/src/commands/search/: author.rs  content.rs  help.rs
meigen/src/db/: filedb.rs  mongodb.rs
proto/: meigen_api.proto
src/: api.rs  botconfig.rs  cli.rs  command.rs  command_registry.rs  commands.rs  db.rs  lib.rs  main.rs  make_error_enum.rs  message_checker.rs  message_parser.rs  message_resolver.rs  message_solver.rs  model.rs  report.rs  util.rs
src/api/: inner.rs
src/command/: delete.rs  help.rs  id.rs  list.rs  make.rs  random.rs  search.rs  status.rs
src/command/search/: author.rs  content.rs
src/commands/: author.rs  delete.rs  help.rs  id.rs  list.rs  make.rs  random.rs  search.rs  status.rs
src/commands/search/: author.rs  content.rs  help.rs  word.rs
src/db/: filedb.rs  mem.rs  mod.rs  mongo.rs  mongodb.rs
src/entrypoint/: mod.rs
src/entrypoint/api/: auth.rs  graphql.rs  grpc.rs  mod.rs  warp.rs
src/entrypoint/console/: mod.rs
src/entrypoint/discord_webhook/: interaction.rs  mod.rs  model.rs  models.rs  verify.rs
