[package]
name = "meigen_bot_rust"
version = "0.2.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
dotenv = "0.15.0"
hex = "0.4.2"
mongodb = "1.1.1"
rand = "0.8.2"
regex = "1.4.3"
ring = "0.16.19"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
# use 0.2 because mongodb doesn't support latest tokio
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
warp = "0.2.5"

[profile.release]
lto = true
codegen-units = 1
