[package]
name = "meigen_bot_rust"
version = "0.2.2"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
hex = "0.4"
mongodb = "2.0.0-alpha"
rand = "0.8"
regex = "1.4"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"

[profile.release]
lto = true
codegen-units = 1
