[package]
name = "db"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
tokio = { version = "0.2.22", features = ["full"] }
mongodb = "1.1.1"
log = "0.4.11"
