[package]
name = "discord_bot"
version = "0.1.0"
authors = ["kawaemon <34652535+kawaemon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
serenity = "0.9.1"
log = "0.4.11"
tokio = { version = "0.2.22", features = ["full"] }
rand = "0.7.3"
pretty_env_logger = "0.4.0"
